<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/courier_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_xlarge"
            android:layout_marginTop="@dimen/padding_margin_xlarge"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/your_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/courier_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_xlarge"
            android:layout_marginTop="@dimen/padding_margin_medium"
            android:layout_marginEnd="40dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/your_number_phone"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courier_name" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/padding_margin_xlarge"
            android:paddingHorizontal="@dimen/padding_margin_xxxlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courier_phone">

            <View
                android:id="@+id/second_divider_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/worked_courier_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_small"
                android:gravity="center"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/active_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="отработано за всё время"
                android:textSize="@dimen/text_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/worked_courier_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_small"
                android:gravity="center"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recovered_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="отработано за все время"
                android:textSize="@dimen/text_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/delivered_courier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_small"
                android:gravity="center"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="доставленно за всё время"
                android:textSize="@dimen/text_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/salary_courier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_small"
                android:gravity="center"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_xlarge"
                android:gravity="center"
                android:text="заработано за всё время"
                android:textSize="@dimen/text_medium" />

            <View
                android:id="@+id/second_divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_btn"
            style="@style/LoginTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_button_height"
            android:layout_marginStart="@dimen/padding_margin_medium"
            android:layout_marginTop="@dimen/padding_margin_medium"
            android:layout_marginEnd="@dimen/padding_margin_medium"
            android:layout_marginBottom="@dimen/padding_margin_xlarge"
            android:text="@string/sign_out"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
